RESOLVED FIXED66692
[EFL] Do not treat valid cases in ewk_frame_child_add() as failures
https://bugs.webkit.org/show_bug.cgi?id=66692
Summary [EFL] Do not treat valid cases in ewk_frame_child_add() as failures
Raphael Kubo da Costa (:rakuco)
Reported 2011-08-22 11:38:34 PDT
[EFL] Do not treat valid cases in ewk_frame_child_add() as failures
Attachments
Patch (4.54 KB, patch)
2011-08-22 11:40 PDT, Raphael Kubo da Costa (:rakuco)
no flags
Add rubberstamp note on ChangeLog entry (4.03 KB, patch)
2011-08-23 10:23 PDT, Leandro Pereira
no flags
Raphael Kubo da Costa (:rakuco)
Comment 1 2011-08-22 11:40:40 PDT
Raphael Kubo da Costa (:rakuco)
Comment 2 2011-08-22 11:44:07 PDT
CC'ing kenneth, hoping for at least a rubber-stamp ;)
Kenneth Rohde Christiansen
Comment 3 2011-08-22 13:00:16 PDT
Comment on attachment 104705 [details] Patch Ok, rs=me
Leandro Pereira
Comment 4 2011-08-23 10:23:46 PDT
Created attachment 104863 [details] Add rubberstamp note on ChangeLog entry
WebKit Review Bot
Comment 5 2011-08-23 11:28:04 PDT
Comment on attachment 104863 [details] Add rubberstamp note on ChangeLog entry Clearing flags on attachment: 104863 Committed r93617: <http://trac.webkit.org/changeset/93617>
WebKit Review Bot
Comment 6 2011-08-23 11:28:09 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.