[EFL] Do not treat valid cases in ewk_frame_child_add() as failures. https://bugs.webkit.org/show_bug.cgi?id=66692

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-08-23
Rubber-stamped by Kenneth Rohde Christiansen.

Frame::page() and FrameTree::parent() returning 0 were being considered
failure cases, however it is possible for them to return 0 when some
arbitrary JavaScript is run.

The function's return type has been changed to make it easier to convey
these cases to the caller (which is only ewk_view_frame_create).

This should make tests like
fast/dom/null-page-show-modal-dialog-crash.html stop outputting
erroneous messages to stderr.

* ewk/ewk_frame.cpp:
(ewk_frame_child_add):
* ewk/ewk_private.h:

Canonical link: https://commits.webkit.org/82594@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93617 268f45cc-cd09-0410-ab3c-d52691b4dbfc